test/fixtures/source-map/output/source_map_throw_set_immediate.snapshot
<project-root>/test/fixtures/source-map/uglify-throw-original.js:5
  throw Error('goodbye');
  ^

Error: goodbye
    at Hello (<project-root>/test/fixtures/source-map/uglify-throw-original.js:5:9)
    at Immediate.<anonymous> (<project-root>/test/fixtures/source-map/uglify-throw-original.js:9:3)
    at <node-internal-frames>

Node.js <node-version>
